--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.error.include-message=always
 
-# Telegram Bot Token
-telegram.bot.token=7569806680:AAHHm8FKUTxK0B_-dBlG8cw076vk2A5ZD3c
-
 # kafka
 spring.application.name=spring-boot-kafka-example
 spring.kafka.bootstrap-servers=localhost:9092
@@ -25,3 +22,6 @@ spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+telegram.bot.token=8277108576:AAGrGtlVuoMgOsaSGQiX4XA6uQSQPhl08Rc
+telegram.bot.username=weather_recomend_bot
