Add telegram bot

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,5 +23,5 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.S
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
-telegram.bot.token=8277108576:AAGrGtlVuoMgOsaSGQiX4XA6uQSQPhl08Rc
+telegram.bot.token=
 telegram.bot.username=weather_recomend_bot
